--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
 
       <nav class="nav primary-nav">
 
-        <a href="index.html">Главная</a>
-        <a href="speakers.html">Спикеры</a>
-        <a href="schedule.html">Расписание</a>
-        <a href="venue.html">Место проведения</a>
-        <a href="register.html">Регистрация</a>
+        <ul>
+
+          <li><a href="index.html">Главная</a></li><!--
+          --><li><a href="speakers.html">Спикеры</a></li><!--
+          --><li><a href="schedule.html">Расписание</a></li><!--
+          --><li><a href="venue.html">Место проведения</a></li><!--
+          --><li><a href="register.html">Регистрация</a></li>
+
+        </ul>
 
       </nav>
 
@@ -48,9 +52,9 @@
       <div class="grid">
 
         <section class="teaser col-1-3">
-
+        <h5>Спикеры</h5>
    	    <a href="speakers.html">
-            <h5>Спикеры</h5>
+            <img src="assets/images/home/speakers.jpg" alt="Профессиональные спикеры">
             <h3>Спикеры мирового класса</h3>
   	    </a>
         <p>К нам приедут более двадцати фантастических спикеров со всего мира, чтобы поделиться своими историями.</p>
@@ -58,9 +62,9 @@
         </section><!--
 
         --><section class="teaser col-1-3">
-
+          <h5>Расписание</h5>
           <a href="schedule.html">
-            <h5>Расписание</h5>
+            <img src="assets/images/home/schedule.jpg" alt="Участники конференции">
             <h3>Три вдохновляющих дня</h3>
   	    </a>
         <p>Наслаждайтесь тремя вдохновляющими и насыщенными событиями днями переговоров, встреч и всем хорошим вокруг.</p>
@@ -68,9 +72,9 @@
         </section><!--
 
         ---><section class="teaser col-1-3">
-
+          <h5>Место проведения</h5>
           <a href="venue.html">
-            <h5>Место проведения</h5>
+            <img src="assets/images/home/venue.jpg" alt="Театр Чикаго">
             <h3>Театр Чикаго</h3>
   	    </a>
         <p>Театр Чикаго в самом центре города обеспечит красивое место проведения конференции.</p>
@@ -88,11 +92,15 @@
 
         <nav class="nav">
 
-          <a href="index.html">Главная</a>
-          <a href="speakers.html">Спикеры</a>
-          <a href="schedule.html">Расписание</a>
-          <a href="venue.html">Место проведения</a>
-          <a href="register.html">Регистрация</a>
+          <ul>
+
+            <li><a href="index.html">Главная</a></li><!--
+            --><li><a href="speakers.html">Спикеры</a></li><!--
+            --><li><a href="schedule.html">Расписание</a></li><!--
+            --><li><a href="venue.html">Место проведения</a></li><!--
+            --><li><a href="register.html">Регистрация</a></li>
+
+          </ul>
 
         </nav>
 
