--- a/schedule.html
+++ b/schedule.html
@@ -22,11 +22,15 @@
 
       <nav class="nav primary-nav">
 
-        <a href="index.html">Главная</a>
-        <a href="speakers.html">Спикеры</a>
-        <a href="schedule.html">Расписание</a>
-        <a href="venue.html">Место проведения</a>
-        <a href="register.html">Регистрация</a>
+        <ul>
+
+          <li><a href="index.html">Главная</a></li><!--
+          --><li><a href="speakers.html">Спикеры</a></li><!--
+          --><li><a href="schedule.html">Расписание</a></li><!--
+          --><li><a href="venue.html">Место проведения</a></li><!--
+          --><li><a href="register.html">Регистрация</a></li>
+
+        </ul>
 
       </nav>
 
@@ -41,7 +45,7 @@
 
         <p>Конференция открывается удивительными семинарами и продолжится двумя днями
         невероятных разговоров и презентаций, которые проводятся при содействии ведущих
-        специалистов в отрасли.</p>        
+        специалистов в отрасли.</p>
 
       </div>
 
@@ -54,11 +58,15 @@
 
         <nav class="nav">
 
-          <a href="index.html">Главная</a>
-          <a href="speakers.html">Спикеры</a>
-          <a href="schedule.html">Расписание</a>
-          <a href="venue.html">Место проведения</a>
-          <a href="register.html">Регистрация</a>
+          <ul>
+
+            <li><a href="index.html">Главная</a></li><!--
+            --><li><a href="speakers.html">Спикеры</a></li><!--
+            --><li><a href="schedule.html">Расписание</a></li><!--
+            --><li><a href="venue.html">Место проведения</a></li><!--
+            --><li><a href="register.html">Регистрация</a></li>
+
+          </ul>
 
         </nav>
 
