--- a/src/register.html
+++ b/src/register.html
@@ -31,7 +31,7 @@
 
    <section class="row-alt">
       <div class="lead container">
-         <h1>Регистрация</h1>
+         <h2>Регистрация</h2>
 
          <p>
             Каждый год мы стремимся невероятно провести время и в этом году мы
@@ -76,12 +76,12 @@
                </label>
 
                <label>Число билетов
-                  <select name="quantity" required>
-                     <option value="1" selected>1</option>
-                     <option value="2">2</option>
-                     <option value="3">3</option>
-                     <option value="4">4</option>
-                     <option value="5">5</option>
+                  <select name="quantity" required multiple>
+                     <option value="1" selected></option>
+                     <option value="2"></option>
+                     <option value="3"></option>
+                     <option value="4"></option>
+                     <option value="5"></option>
                   </select>
                </label>
 
