add webp images

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,10 @@
             <h5>Спикеры</h5>
 
             <a href="speakers.html">
-               <img src="images/home/speakers.jpg" alt="Профессиональные спикеры">
+               <picture>
+                  <source srcset="images/home/speakers.webp">
+                  <img src="images/home/speakers.jpg" alt="Профессиональные спикеры">
+               </picture>
                <h3>Спикеры мирового класса</h3>
             </a>
 
@@ -60,7 +63,10 @@
             <h5>Расписание</h5>
 
             <a href="schedule.html">
-               <img src="images/home/schedule.jpg" alt="Участники конференции">
+               <picture>
+                  <source srcset="images/home/schedule.webp">
+                  <img src="images/home/schedule.jpg" alt="Участники конференции">
+               </picture>
                <h3>Три вдохновляющих дня</h3>
             </a>
 
@@ -74,7 +80,11 @@
             <h5>Место проведения</h5>
 
             <a href="venue.html">
-               <img src="images/home/venue.jpg" alt="Театр Чикаго">
+
+               <picture>
+                  <source srcset="images/home/venue.webp">
+                  <img src="images/home/venue.jpg" alt="Театр Чикаго">
+               </picture>
                <h3>Театр Чикаго</h3>
             </a>
 
