--- a/src/speakers.html
+++ b/src/speakers.html
@@ -69,7 +69,10 @@
 
          --><aside class="col-1-3">
                <div class="speaker-info">
-                  <img src="images/speakers/chris-mills.jpg" alt="Крис Миллс">
+                  <picture>
+                     <source srcset="images/speakers/chris-mills.webp">
+                     <img src="images/speakers/chris-mills.jpg" alt="Крис Миллс">
+                  </picture>
 
                   <ul>
                      <li><a href="https://twitter.com/chrisdavidmills">@chrisdavidmills</a></li>
@@ -106,7 +109,10 @@
 
          --><aside class="col-1-3">
                <div class="speaker-info">
-                  <img src="images/speakers/shay-howe.jpg" alt="Шэй Хоу">
+                  <picture>
+                     <source srcset="images/speakers/shay-howe.webp">
+                     <img src="images/speakers/shay-howe.jpg" alt="Шэй Хоу">
+                  </picture>
 
                   <ul>
                      <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
