--- a/src/register.html
+++ b/src/register.html
@@ -77,11 +77,11 @@
 
                <label>Число билетов
                   <select name="quantity" required multiple>
-                     <option value="1" selected></option>
-                     <option value="2"></option>
-                     <option value="3"></option>
-                     <option value="4"></option>
-                     <option value="5"></option>
+                     <option value="1" selected>1</option>
+                     <option value="2">2</option>
+                     <option value="3">3</option>
+                     <option value="4">4</option>
+                     <option value="5">5</option>
                   </select>
                </label>
 
